diesel_compile_tests/tests/fail/array_expressions_must_be_same_type.stderr
error[E0277]: the trait bound `f64: diesel::SelectableExpression<()>` is not satisfied
   --> $DIR/array_expressions_must_be_same_type.rs:11:5
    |
11  |     select(array((1, 3f64))).get_result::<Vec<i32>>(&connection).unwrap();
    |     ^^^^^^ the trait `diesel::SelectableExpression<()>` is not implemented for `f64`
    |
   ::: $WORKSPACE/diesel/src/query_builder/functions.rs
    |
    |     SelectStatement<()>: SelectDsl<T>,
    |                          ------------ required by this bound in `diesel::select`
    |
    = note: required because of the requirements on the impl of `diesel::SelectableExpression<()>` for `(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64)`
    = note: required because of the requirements on the impl of `diesel::SelectableExpression<()>` for `diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>`
    = note: required because of the requirements on the impl of `diesel::query_dsl::select_dsl::SelectDsl<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>` for `diesel::query_builder::SelectStatement<()>`

error[E0277]: the trait bound `f64: diesel::expression::ValidGrouping<()>` is not satisfied
   --> $DIR/array_expressions_must_be_same_type.rs:11:5
    |
11  |     select(array((1, 3f64))).get_result::<Vec<i32>>(&connection).unwrap();
    |     ^^^^^^ the trait `diesel::expression::ValidGrouping<()>` is not implemented for `f64`
    |
   ::: $WORKSPACE/diesel/src/query_builder/functions.rs
    |
    |     SelectStatement<()>: SelectDsl<T>,
    |                          ------------ required by this bound in `diesel::select`
    |
    = note: required because of the requirements on the impl of `diesel::expression::ValidGrouping<()>` for `(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64)`
    = note: required because of the requirements on the impl of `diesel::expression::ValidGrouping<()>` for `diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>`
    = note: required because of the requirements on the impl of `diesel::query_dsl::select_dsl::SelectDsl<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>` for `diesel::query_builder::SelectStatement<()>`

error[E0277]: the trait bound `f64: diesel::SelectableExpression<()>` is not satisfied
  --> $DIR/array_expressions_must_be_same_type.rs:11:30
   |
11 |     select(array((1, 3f64))).get_result::<Vec<i32>>(&connection).unwrap();
   |                              ^^^^^^^^^^ the trait `diesel::SelectableExpression<()>` is not implemented for `f64`
   |
   = note: required because of the requirements on the impl of `diesel::SelectableExpression<()>` for `(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64)`
   = note: required because of the requirements on the impl of `diesel::SelectableExpression<()>` for `diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>`
   = note: required because of the requirements on the impl of `diesel::query_builder::SelectClauseExpression<()>` for `diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>`
   = note: required because of the requirements on the impl of `diesel::query_builder::Query` for `diesel::query_builder::SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>>`
   = note: required because of the requirements on the impl of `diesel::query_dsl::LoadQuery<_, std::vec::Vec<i32>>` for `diesel::query_builder::SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>>`

error[E0277]: the trait bound `f64: diesel::expression::ValidGrouping<()>` is not satisfied
  --> $DIR/array_expressions_must_be_same_type.rs:11:30
   |
11 |     select(array((1, 3f64))).get_result::<Vec<i32>>(&connection).unwrap();
   |                              ^^^^^^^^^^ the trait `diesel::expression::ValidGrouping<()>` is not implemented for `f64`
   |
   = note: required because of the requirements on the impl of `diesel::expression::ValidGrouping<()>` for `(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64)`
   = note: required because of the requirements on the impl of `diesel::expression::ValidGrouping<()>` for `diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>`
   = note: required because of the requirements on the impl of `diesel::query_builder::Query` for `diesel::query_builder::SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>>`
   = note: required because of the requirements on the impl of `diesel::query_dsl::LoadQuery<_, std::vec::Vec<i32>>` for `diesel::query_builder::SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>>`

error[E0277]: the trait bound `f64: diesel::query_builder::QueryId` is not satisfied
  --> $DIR/array_expressions_must_be_same_type.rs:11:30
   |
11 |     select(array((1, 3f64))).get_result::<Vec<i32>>(&connection).unwrap();
   |                              ^^^^^^^^^^ the trait `diesel::query_builder::QueryId` is not implemented for `f64`
   |
   = note: required because of the requirements on the impl of `diesel::query_builder::QueryId` for `(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64)`
   = note: required because of the requirements on the impl of `diesel::query_builder::QueryId` for `diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>`
   = note: required because of the requirements on the impl of `diesel::query_builder::QueryId` for `diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>`
   = note: required because of the requirements on the impl of `diesel::query_builder::QueryId` for `diesel::query_builder::SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>>`
   = note: required because of the requirements on the impl of `diesel::query_dsl::LoadQuery<_, std::vec::Vec<i32>>` for `diesel::query_builder::SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>>`

error[E0277]: the trait bound `f64: diesel::query_builder::QueryFragment<_>` is not satisfied
  --> $DIR/array_expressions_must_be_same_type.rs:11:30
   |
11 |     select(array((1, 3f64))).get_result::<Vec<i32>>(&connection).unwrap();
   |                              ^^^^^^^^^^ the trait `diesel::query_builder::QueryFragment<_>` is not implemented for `f64`
   |
   = note: required because of the requirements on the impl of `diesel::query_builder::QueryFragment<_>` for `(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64)`
   = note: required because of the requirements on the impl of `for<'a> diesel::query_builder::QueryFragment<_>` for `&'a (diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64)`
   = note: required because of the requirements on the impl of `diesel::query_builder::QueryFragment<_>` for `diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>`
   = note: required because of the requirements on the impl of `diesel::query_builder::SelectClauseQueryFragment<(), _>` for `diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>`
   = note: required because of the requirements on the impl of `diesel::query_builder::QueryFragment<_>` for `diesel::query_builder::SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>>`
   = note: required because of the requirements on the impl of `diesel::query_dsl::LoadQuery<_, std::vec::Vec<i32>>` for `diesel::query_builder::SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>>`

error[E0277]: the trait bound `f64: diesel::Expression` is not satisfied
  --> $DIR/array_expressions_must_be_same_type.rs:11:12
   |
11 |     select(array((1, 3f64))).get_result::<Vec<i32>>(&connection).unwrap();
   |            ^^^^^ the trait `diesel::Expression` is not implemented for `f64`
   |
  ::: $WORKSPACE/diesel/src/pg/expression/array.rs
   |
   |     T: AsExpressionList<ST>,
   |        -------------------- required by this bound in `diesel::dsl::array`
   |
   = note: required because of the requirements on the impl of `diesel::expression::AsExpression<diesel::sql_types::Integer>` for `f64`
   = note: required because of the requirements on the impl of `diesel::expression::AsExpressionList<diesel::sql_types::Integer>` for `(i32, f64)`

error[E0277]: the trait bound `{integer}: diesel::SelectableExpression<()>` is not satisfied
   --> $DIR/array_expressions_must_be_same_type.rs:12:5
    |
12  |     select(array((1, 3f64))).get_result::<Vec<f64>>(&connection).unwrap();
    |     ^^^^^^ the trait `diesel::SelectableExpression<()>` is not implemented for `{integer}`
    |
   ::: $WORKSPACE/diesel/src/query_builder/functions.rs
    |
    |     SelectStatement<()>: SelectDsl<T>,
    |                          ------------ required by this bound in `diesel::select`
    |
    = help: the following implementations were found:
              <&'a T as diesel::SelectableExpression<QS>>
              <(A, B) as diesel::SelectableExpression<QS>>
              <(A, B, C) as diesel::SelectableExpression<QS>>
              <(A, B, C, D) as diesel::SelectableExpression<QS>>
            and 125 others
    = note: required because of the requirements on the impl of `diesel::SelectableExpression<()>` for `({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>)`
    = note: required because of the requirements on the impl of `diesel::SelectableExpression<()>` for `diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>`
    = note: required because of the requirements on the impl of `diesel::query_dsl::select_dsl::SelectDsl<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>` for `diesel::query_builder::SelectStatement<()>`

error[E0277]: the trait bound `{integer}: diesel::expression::ValidGrouping<()>` is not satisfied
   --> $DIR/array_expressions_must_be_same_type.rs:12:5
    |
12  |     select(array((1, 3f64))).get_result::<Vec<f64>>(&connection).unwrap();
    |     ^^^^^^ the trait `diesel::expression::ValidGrouping<()>` is not implemented for `{integer}`
    |
   ::: $WORKSPACE/diesel/src/query_builder/functions.rs
    |
    |     SelectStatement<()>: SelectDsl<T>,
    |                          ------------ required by this bound in `diesel::select`
    |
    = help: the following implementations were found:
              <&'a T as diesel::expression::ValidGrouping<GB>>
              <(A, B) as diesel::expression::ValidGrouping<__GroupByClause>>
              <(A, B, C) as diesel::expression::ValidGrouping<__GroupByClause>>
              <(A, B, C, D) as diesel::expression::ValidGrouping<__GroupByClause>>
            and 120 others
    = note: required because of the requirements on the impl of `diesel::expression::ValidGrouping<()>` for `({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>)`
    = note: required because of the requirements on the impl of `diesel::expression::ValidGrouping<()>` for `diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>`
    = note: required because of the requirements on the impl of `diesel::query_dsl::select_dsl::SelectDsl<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>` for `diesel::query_builder::SelectStatement<()>`

error[E0277]: the trait bound `{integer}: diesel::SelectableExpression<()>` is not satisfied
  --> $DIR/array_expressions_must_be_same_type.rs:12:30
   |
12 |     select(array((1, 3f64))).get_result::<Vec<f64>>(&connection).unwrap();
   |                              ^^^^^^^^^^ the trait `diesel::SelectableExpression<()>` is not implemented for `{integer}`
   |
   = help: the following implementations were found:
             <&'a T as diesel::SelectableExpression<QS>>
             <(A, B) as diesel::SelectableExpression<QS>>
             <(A, B, C) as diesel::SelectableExpression<QS>>
             <(A, B, C, D) as diesel::SelectableExpression<QS>>
           and 125 others
   = note: required because of the requirements on the impl of `diesel::SelectableExpression<()>` for `({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>)`
   = note: required because of the requirements on the impl of `diesel::SelectableExpression<()>` for `diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>`
   = note: required because of the requirements on the impl of `diesel::query_builder::SelectClauseExpression<()>` for `diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>`
   = note: required because of the requirements on the impl of `diesel::query_builder::Query` for `diesel::query_builder::SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>>`
   = note: required because of the requirements on the impl of `diesel::query_dsl::LoadQuery<_, std::vec::Vec<f64>>` for `diesel::query_builder::SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>>`

error[E0277]: the trait bound `{integer}: diesel::expression::ValidGrouping<()>` is not satisfied
  --> $DIR/array_expressions_must_be_same_type.rs:12:30
   |
12 |     select(array((1, 3f64))).get_result::<Vec<f64>>(&connection).unwrap();
   |                              ^^^^^^^^^^ the trait `diesel::expression::ValidGrouping<()>` is not implemented for `{integer}`
   |
   = help: the following implementations were found:
             <&'a T as diesel::expression::ValidGrouping<GB>>
             <(A, B) as diesel::expression::ValidGrouping<__GroupByClause>>
             <(A, B, C) as diesel::expression::ValidGrouping<__GroupByClause>>
             <(A, B, C, D) as diesel::expression::ValidGrouping<__GroupByClause>>
           and 120 others
   = note: required because of the requirements on the impl of `diesel::expression::ValidGrouping<()>` for `({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>)`
   = note: required because of the requirements on the impl of `diesel::expression::ValidGrouping<()>` for `diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>`
   = note: required because of the requirements on the impl of `diesel::query_builder::Query` for `diesel::query_builder::SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>>`
   = note: required because of the requirements on the impl of `diesel::query_dsl::LoadQuery<_, std::vec::Vec<f64>>` for `diesel::query_builder::SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>>`

error[E0277]: the trait bound `{integer}: diesel::query_builder::QueryId` is not satisfied
  --> $DIR/array_expressions_must_be_same_type.rs:12:30
   |
12 |     select(array((1, 3f64))).get_result::<Vec<f64>>(&connection).unwrap();
   |                              ^^^^^^^^^^ the trait `diesel::query_builder::QueryId` is not implemented for `{integer}`
   |
   = help: the following implementations were found:
             <&'a T as diesel::query_builder::QueryId>
             <() as diesel::query_builder::QueryId>
             <(A, B) as diesel::query_builder::QueryId>
             <(A, B, C) as diesel::query_builder::QueryId>
           and 186 others
   = note: required because of the requirements on the impl of `diesel::query_builder::QueryId` for `({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>)`
   = note: required because of the requirements on the impl of `diesel::query_builder::QueryId` for `diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>`
   = note: required because of the requirements on the impl of `diesel::query_builder::QueryId` for `diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>`
   = note: required because of the requirements on the impl of `diesel::query_builder::QueryId` for `diesel::query_builder::SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>>`
   = note: required because of the requirements on the impl of `diesel::query_dsl::LoadQuery<_, std::vec::Vec<f64>>` for `diesel::query_builder::SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>>`

error[E0277]: the trait bound `{integer}: diesel::query_builder::QueryFragment<_>` is not satisfied
  --> $DIR/array_expressions_must_be_same_type.rs:12:30
   |
12 |     select(array((1, 3f64))).get_result::<Vec<f64>>(&connection).unwrap();
   |                              ^^^^^^^^^^ the trait `diesel::query_builder::QueryFragment<_>` is not implemented for `{integer}`
   |
   = help: the following implementations were found:
             <&'a T as diesel::query_builder::QueryFragment<DB>>
             <() as diesel::query_builder::QueryFragment<DB>>
             <(A, B) as diesel::query_builder::QueryFragment<__DB>>
             <(A, B, C) as diesel::query_builder::QueryFragment<__DB>>
           and 216 others
   = note: required because of the requirements on the impl of `diesel::query_builder::QueryFragment<_>` for `({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>)`
   = note: required because of the requirements on the impl of `for<'a> diesel::query_builder::QueryFragment<_>` for `&'a ({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>)`
   = note: required because of the requirements on the impl of `diesel::query_builder::QueryFragment<_>` for `diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>`
   = note: required because of the requirements on the impl of `diesel::query_builder::SelectClauseQueryFragment<(), _>` for `diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>`
   = note: required because of the requirements on the impl of `diesel::query_builder::QueryFragment<_>` for `diesel::query_builder::SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>>`
   = note: required because of the requirements on the impl of `diesel::query_dsl::LoadQuery<_, std::vec::Vec<f64>>` for `diesel::query_builder::SelectStatement<(), diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>>`

error[E0277]: the trait bound `{integer}: diesel::Expression` is not satisfied
  --> $DIR/array_expressions_must_be_same_type.rs:12:12
   |
12 |     select(array((1, 3f64))).get_result::<Vec<f64>>(&connection).unwrap();
   |            ^^^^^ the trait `diesel::Expression` is not implemented for `{integer}`
   |
  ::: $WORKSPACE/diesel/src/pg/expression/array.rs
   |
   |     T: AsExpressionList<ST>,
   |        -------------------- required by this bound in `diesel::dsl::array`
   |
   = help: the following implementations were found:
             <&'a T as diesel::Expression>
             <(A, B) as diesel::Expression>
             <(A, B, C) as diesel::Expression>
             <(A, B, C, D) as diesel::Expression>
           and 101 others
   = note: required because of the requirements on the impl of `diesel::expression::AsExpression<diesel::sql_types::Double>` for `{integer}`
   = note: required because of the requirements on the impl of `diesel::expression::AsExpressionList<diesel::sql_types::Double>` for `({integer}, f64)`

error[E0277]: the trait bound `diesel::query_builder::SelectStatement<()>: diesel::query_dsl::select_dsl::SelectDsl<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>` is not satisfied
  --> $DIR/array_expressions_must_be_same_type.rs:11:5
   |
11 |     select(array((1, 3f64))).get_result::<Vec<i32>>(&connection).unwrap();
   |     ^^^^^^ the trait `diesel::query_dsl::select_dsl::SelectDsl<diesel::pg::expression::array::ArrayLiteral<(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64), diesel::sql_types::Integer>>` is not implemented for `diesel::query_builder::SelectStatement<()>`
   |
   = help: the following implementations were found:
             <diesel::query_builder::SelectStatement<F, S, D, W, O, LOf, G, LC> as diesel::query_dsl::select_dsl::SelectDsl<Selection>>

error[E0277]: the trait bound `diesel::query_builder::SelectStatement<()>: diesel::query_dsl::select_dsl::SelectDsl<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>` is not satisfied
  --> $DIR/array_expressions_must_be_same_type.rs:12:5
   |
12 |     select(array((1, 3f64))).get_result::<Vec<f64>>(&connection).unwrap();
   |     ^^^^^^ the trait `diesel::query_dsl::select_dsl::SelectDsl<diesel::pg::expression::array::ArrayLiteral<({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>), diesel::sql_types::Double>>` is not implemented for `diesel::query_builder::SelectStatement<()>`
   |
   = help: the following implementations were found:
             <diesel::query_builder::SelectStatement<F, S, D, W, O, LOf, G, LC> as diesel::query_dsl::select_dsl::SelectDsl<Selection>>
